# graphicsfuzz

assembly-binaries/: pom.xml
generator/src/main/java/com/graphicsfuzz/generator/tool/: Generate.java
gf-auto/: .gitignore  Pipfile  README.md  run_formatter.sh  run_protoc.sh  setup.cfg  setup.py
gf-auto/gf_auto/: add_amber_tests_to_cts.py  artifact.proto  artifact_pb2.py  artifact_pb2.pyi  artifact_util.py  common.proto  gf_logging.py  proto_util.py  recipe.proto  recipe_pb2.py  recipe_pb2.pyi  run_glsl_shader_job_add_red_pixels.py  run_glslang_spirv.py  run_protoc.sh  run_spirv_asm_shader_job_to_amber_script.py  run_spirv_opt.py  run_spirv_shader_job_to_amber_script.py  run_spirv_shader_job_to_spirv_asm_shader_job.py  shader_job_util.py  subprocess_util.py  util.py
gf-auto/gfauto/: __init__.py  artifact.proto  artifact_pb2.py  artifacts.py  common_pb2.py  common_pb2.pyi  gflogging.py  main.py  proto_util.py  recipe.proto  recipe_glsl_shader_job_add_red_pixels.py  recipe_glsl_shader_job_to_spirv_shader_job.py  recipe_pb2.py  recipe_spirv_asm_shader_job_to_amber_script.py  recipe_spirv_shader_job_to_spirv_asm_shader_job.py  recipe_spirv_shader_job_to_spirv_shader_job_opt.py  shader_job_util.py  subprocess_util.py  util.py
gfauto/: .flake8  .gitignore  Pipfile  README.md  azure-pipelines.yml  check_all.sh  dev_shell.sh.template  fix_all.sh  pylintrc  pyproject.toml  run_protoc.sh  setup.cfg  setup.py  whitelist.dic  whitelist.txt
gfauto/docs/demo/: walk_through.md
gfauto/docs/demo/intel_mesa_vk_icdNegotiateLoaderICDInterfaceVersion/: generate_cts_test.py
gfauto/docs/demo/intel_mesa_vk_icdNegotiateLoaderICDInterfaceVersion/reduced_glsl/: test.json
gfauto/docs/demo/intel_mesa_vk_icdNegotiateLoaderICDInterfaceVersion/reduced_glsl/variant/: shader.frag
gfauto/docs/demo/intel_mesa_vk_icdNegotiateLoaderICDInterfaceVersion/reduced_glsl_result/variant/: amber_log.txt  log.txt  test.amber
gfauto/docs/demo/intel_mesa_vk_icdNegotiateLoaderICDInterfaceVersion/reduced_glsl_result/variant/0_glsl/: shader.frag
gfauto/docs/demo/intel_mesa_vk_icdNegotiateLoaderICDInterfaceVersion/reduced_glsl_result/variant/1_spirv/: shader.frag.spv
gfauto/docs/demo/intel_mesa_vk_icdNegotiateLoaderICDInterfaceVersion/reduced_glsl_result/variant/1_spirv_asm/: shader.frag.asm
gfauto/docs/demo/intel_mesa_vk_icdNegotiateLoaderICDInterfaceVersion/unreduced_glsl/variant/: shader.frag
gfauto/docs/demo/intel_mesa_vk_icdNegotiateLoaderICDInterfaceVersion/unreduced_glsl_result/variant/: amber_log.txt  log.txt  test.amber
gfauto/docs/demo/intel_mesa_vk_icdNegotiateLoaderICDInterfaceVersion/unreduced_glsl_result/variant/0_glsl/: shader.json
gfauto/docs/demo/intel_mesa_vk_icdNegotiateLoaderICDInterfaceVersion/unreduced_glsl_result/variant/1_spirv/: shader.frag.spv
gfauto/docs/demo/intel_mesa_vk_icdNegotiateLoaderICDInterfaceVersion/unreduced_glsl_result/variant/1_spirv_asm/: shader.frag.asm
gfauto/docs/demo/intel_mesa_wrong_image_demo/: combined_EXAMPLE_future.amber  combined_EXAMPLE_future_sanity.amber  combined_EXAMPLE_now.amber  generate_cts_test.py  reference.frag  variant_008.frag  variant_008.json  variant_008_reduced_0092_fail.frag  variant_008_reduced_final.frag
gfauto/gfauto/: add_amber_tests_to_cts.py  amber_converter.py  android_device.py  artifact.proto  artifact_pb2.py  artifact_pb2.pyi  artifacts.py  built_in_binaries.py  common.proto  common_pb2.py  common_pb2.pyi  device.proto  device_pb2.py  device_pb2.pyi  devices_util.py  fuzz.py  fuzz_glsl_test.py  generate_cts_test_template.py  gfauto_interestingness_test.py  gflogging.py  host_device_util.py  main.py  proto_util.py  recipe.proto  recipe_download_and_extract_archive_set.py  recipe_glsl_reference_shader_job_to_glsl_variant_shader_job.py  recipe_glsl_shader_job_add_red_pixels.py  recipe_glsl_shader_job_to_spirv_shader_job.py  recipe_pb2.py  recipe_pb2.pyi  recipe_spirv_asm_shader_job_to_amber_script.py  recipe_spirv_shader_job_to_spirv_asm_shader_job.py  recipe_spirv_shader_job_to_spirv_shader_job_opt.py  recipe_wrap.py  result_util.py  settings.proto  settings_pb2.py  settings_pb2.pyi  settings_util.py  shader_job_util.py  (+8 more)
spirv-fuzz-layer/: CMakeLists.txt  build.sh  fetch_externals.sh
spirv-fuzz-layer/cmake/: FindSpirv-Tools.cmake  FindVulkan.cmake  FindVulkanHeaders.cmake
spirv-fuzz-layer/spirv-fuzz-layer/: CMakeLists.txt  layer.cpp  layer.h
