# Copyright 2019 The GraphicsFuzz Project Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ['wheel', 'setuptools']
build-backend = 'setuptools.build_meta'

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']

# Black currently matches against full paths, so we only match one level deep
# to ensure only files in gfauto (and not in the current directory) are
# matched.
# https://github.com/python/black/issues/712

include = 'gfauto/[^/]*[.]py$'
exclude = '__pycache__'

[pycodestyle]
ignore = 'E203,W503,E501'

[flake8]
exclude = '*_pb2.py*'
max-line-length = 88
ignore = 'E203,W503,E501'

[isort]
multi_line_output = 3
include_trailing_comma = 'True'
force_grid_wrap = 0
use_parentheses = 'True'
line_length = 88
skip_glob = '*_pb2.py*'

